add snap example

--- a/example/simplepay/templates/index.html
+++ b/example/simplepay/templates/index.html
@@ -44,7 +44,7 @@
                     <input type="hidden" id="card-token" name="card-token"/>
 
                     <div class='row checkout'>
-                        <span><a href='#'>View Cart</a></span>
+                        <span><a href='/snap'>via SNAP</a></span>
                         <span class='checkout-button'>Checkout</span>
                     </div>
                 </form>
