Change Snap Example to Core Example
Change snap_index link to index.html so the examples are linked

--- a/example/simplepay/templates/snap_index.html
+++ b/example/simplepay/templates/snap_index.html
@@ -23,7 +23,7 @@
         <input type="hidden" id="snap-token" name="snap-token" value="{{.Token}}"/>
 
         <div class='row checkout'>
-            <span><a href='/snap'>via SNAP</a></span>
+            <span><a href='/'>via CORE</a></span>
             <span class='checkout-button'>Checkout</span>
         </div>
     </div>
