Change URL to Midtrans and reformat struct

--- a/example/simplepay/templates/index.html
+++ b/example/simplepay/templates/index.html
@@ -53,7 +53,7 @@
     </body>
 
     <script type='text/javascript'>
-        Veritrans.url = "https://api.sandbox.veritrans.co.id/v2/token";
+        Veritrans.url = "https://api.sandbox.midtrans.com/v2/token";
         Veritrans.client_key = "VT-client-IKktHiy3aRYHljsw";
 
         $(document).ready(function() {
