Change Example Page Label

--- a/example/simplepay/templates/snap_index.html
+++ b/example/simplepay/templates/snap_index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Simplepay</title>
+    <title>Simplepay - SNAP</title>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
     <script src="https://api.sandbox.midtrans.com/v2/assets/js/midtrans.min.js" type="text/javascript"></script>
     <script src="https://app.sandbox.midtrans.com/snap/snap.js"></script>
@@ -23,7 +23,7 @@
         <input type="hidden" id="snap-token" name="snap-token" value="{{.Token}}"/>
 
         <div class='row checkout'>
-            <span><a href='/'>via CORE API</a></span>
+            <span><a href='/'>Core API Example</a></span>
             <span class='checkout-button'>Checkout</span>
         </div>
     </div>
