update example JS url

--- a/example/simplepay/templates/core_api_index.html
+++ b/example/simplepay/templates/core_api_index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Simplepay - Core API</title>
-        <script src="https://api.sandbox.veritrans.co.id/v2/assets/js/midtrans.min.js" type="text/javascript"></script>
+        <script src="https://api.sandbox.midtrans.com/v2/assets/js/midtrans.min.js" type="text/javascript"></script>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
         <script src="/assets/ccfield.js"></script>
         <link href="/assets/common.css" rel="stylesheet"/>
