--- a/example/simplepay/templates/snap_index.html
+++ b/example/simplepay/templates/snap_index.html
@@ -4,7 +4,7 @@
     <title>Simplepay - SNAP</title>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
     <script src="https://api.sandbox.midtrans.com/v2/assets/js/midtrans.min.js" type="text/javascript"></script>
-    <script src="https://app.sandbox.midtrans.com/snap/snap.js"></script>
+    <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="{{.ClientKey}}"></script>
     <link href="/assets/common.css" rel="stylesheet"/>
 </head>
 <body>
